@@ -127,7 +127,7 @@ log_find(BAT *b, BAT *d, int val)
 
 	assert(b->ttype == TYPE_int);
 	assert(d->ttype == TYPE_oid);
-	if (BAThash(b, 0) == GDK_SUCCEED) {
+	if (BAThash(b) == GDK_SUCCEED) {
 		HASHloop_int(cni, cni.b->thash, p, &val) {
 			oid pos = p;
 			if (BUNfnd(d, &pos) == BUN_NONE)
@@ -3038,7 +3038,7 @@ logger_find_bat(logger *lg, const char *name)
 	BATiter cni = bat_iterator(lg->catalog_nme);
 	BUN p;
 
-	if (BAThash(lg->catalog_nme, 0) == GDK_SUCCEED) {
+	if (BAThash(lg->catalog_nme) == GDK_SUCCEED) {
 		HASHloop_str(cni, cni.b->thash, p, name) {
 			oid pos = p;
 			if (BUNfnd(lg->dcatalog, &pos) == BUN_NONE)
