@@ -1,6 +1,9 @@
 # ChangeLog file for MonetDB
 # This file is updated with Maddlog
 
+* Tue Jul 24 2018 Sjoerd Mullender <sjoerd@acm.org>
+- Removed "masksize" argument of function BAThash.
+
 * Tue May 29 2018 Sjoerd Mullender <sjoerd@acm.org>
 - A whole bunch of functions that took an int argument that was used as a
   Boolean (true/false) value now take a value of type bool.  The functions
